# my_steel-robot_ws

./: .ament_cmake_lint.yaml  .ament_xmllint.yaml  .clang-format  .coverage  .env  .env.example  .flake8  .gitattributes  .gitignore  .gitmodules  .markdownlint.yaml  Dockerfile  FOXGLOVE_ANLEITUNG.txt  HARDWARE_SETUP_PLAN.md  Justfile  MANIPULATOR.md  PINMAP.md  Projekt.md  README.md  README_.md  SCHNELLSTART.txt  architecture_and_packages.md  build.sh  build_on_remote.sh  command list.md  complete_motor_test.sh  coverage.xml  cspell.config.yaml  diagnose_firmware.sh  docs_PINMAP.md  github-action-local-test.sh  github-action-local-test_v2.sh  micro-ros-platformIO.md  notes.md  rebuild_and_flash.sh  reflash_firmware.sh  sensor_data.csv  setup.cfg  setup.sh  standard.rviz  (+11 more)
.codex/: auth.json  history.jsonl  version.json
.devcontainer/: Dockerfile  Dockerfile.ci  Dockerfile.pi-test  devcontainer.json  install_picotool_and_sdk.sh  repos_to_submodules.py
.github/: copilot-instructions.md  feature-deps.md
.kiro/: cleanup_config.yaml
analysis_results/: analysis_summary.json  complete_build_log.txt  comprehensive_codebase_analysis_report.md  comprehensive_codebase_analysis_summary.json  comprehensive_package_analysis.json  core_packages_analysis.json  corrected_manual_vs_automatic_comparison.md  dependency_map.json  duplicate_analysis_report.json  external_dependencies_analysis.json  final_task1_summary.md  functionality_packages_analysis.json  manual_verification_report.md  package_status_report.json
firmware/tests/: CMakeLists.txt  README.md  test_mecanum_kinematics.sh
(+296 files in other folders)
